# OS

./: .gitignore  update.bat  update.sh
Task1/: CMakeLists.txt  build_and_run.bat  build_and_run.sh
Task2/: CMakeLists.txt
Task2/src/: main.cpp  process_lib.cpp  process_lib.h
Task3/: CMakeLists.txt
Task3/src/: counter.cpp  counter.h  logger.cpp  logger.h  main.cpp  process_manager.cpp  process_manager.h
Task4/: CMakeLists.txt  README.md  build_and_run.bat  build_and_run.sh
Task4/src/: data_aggregator.cpp  data_aggregator.h  emulated_device.cpp  main.cpp
Task5/: CMakeLists.txt  PySite.py  build_and_run.bat  build_and_run.sh  logs.db
Task5/src/: data_aggregator.cpp  data_aggregator.h  emulated_device.cpp  main.cpp  server.cpp  server.h
Task5/templates/: index.html
Task6/: TemperatureManager.pro  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  styles.qss
